test/corpus/00_adm_parliament_issues.txt
================================================================================
Parliament Issues
================================================================================

administrative_reform = {
	category = 3 		# same category = 90% less likely

	allow = {
		num_of_owned_provinces_with = {
			value = 3
			local_autonomy = 20
		}
	}
	
	effect = {
		issue_effect_scaling_with_estate_influence = {
			estate = estate_nobles
			effect1 = "
				random_owned_province = {
					limit = { local_autonomy = 20 }
					add_local_autonomy = -5
				}
			"
			effect2 = "
				random_owned_province = {
					limit = { local_autonomy = 20 }
					add_local_autonomy = -10
				}
			"
			effect3 = "
				random_owned_province = {
					limit = { local_autonomy = 20 }
					add_local_autonomy = -15
				}
			"
			effect4 = "
				random_owned_province = {
					limit = { local_autonomy = 20 }
					add_local_autonomy = -20
				}
			"
			effect5 = "
				random_owned_province = {
					limit = { local_autonomy = 20 }
					add_local_autonomy = -20
				}
				change_government_reform_progress = 25
			"
			fallback_effect = "
				random_owned_province = {
					limit = { local_autonomy = 20 }
					add_local_autonomy = -10
				}
			"
		}
	}
	
	modifier = {
		global_autonomy = -0.05
	}
	
	chance = {
		factor = 1
		modifier = {
			factor = 2
			average_home_autonomy = 25
		}
		modifier = {
			factor = 3
			average_home_autonomy = 35
		}
		modifier = {
			factor = 3
			average_home_autonomy = 50
		}
	}

	ai_will_do = {
		factor = 1
		modifier = {
			factor = 2
			average_home_autonomy = 25
		}
		modifier = {
			factor = 0
			NOT = { average_home_autonomy = 10 }
		}
	}
}

appoint_a_new_prime_minister = {

	category = 3

	allow = {
	}
	
	effect = {
		issue_effect_scaling_with_estate_influence = {
			estate = estate_nobles
			effect1 = "
			define_advisor = {
				type = statesman
				skill = 3
			}
			"
			effect2 = "
			define_advisor = {
				type = statesman
				skill = 3
				cost_multiplier = 0.75
			}
			"
			effect3 = "
			define_advisor = {
				type = statesman
				skill = 3
				cost_multiplier = 0.5
			}
			"
			effect4 = "
			define_advisor = {
				type = statesman
				skill = 3
				cost_multiplier = 0.25
			}
			"
			effect5 = "
			define_advisor = {
				type = statesman
				skill = 3
				cost_multiplier = 0.1
			}
			"
			fallback_effect = "
			define_advisor = {
				type = statesman
				skill = 3
				cost_multiplier = 0.75
			}
			"
		}
	}

	modifier = {
		stability_cost_modifier = -0.15
	}

	chance = {
		factor = 1
	}
	
	ai_will_do = {
		factor = 1		
	}	
}

appropriation_of_land = {

	category = 3

	allow = {
		num_of_cities = 6
	}
	
	on_issue_taken = {
		every_owned_province = {
			clr_province_flag = appropriation_of_land_flag
		}
		random_owned_province = {
			limit = {
				is_in_capital_area = yes
			}
			set_province_flag = appropriation_of_land_flag
		}
		#random_owned_province = {
		#	limit = {
		#		is_in_capital_area = yes
		#		NOT = { has_province_flag = appropriation_of_land_flag }
		#	}
		#	set_province_flag = appropriation_of_land_flag
		#}
	}
	
	effect = {
		hidden_effect = {
			every_owned_province = {
				limit = { has_province_flag = appropriation_of_land_flag }
				add_base_tax = 1
				clr_province_flag = appropriation_of_land_flag
			}
		}
		if = {
			limit = {
				NOT = {
					any_owned_province = {
						has_province_flag = appropriation_of_land_flag
					}
				}
			}
			tooltip = {
				custom_tooltip = appropriation_of_land_tooltip
			}
		}
		if = {
			limit = {
				any_owned_province = {
					has_province_flag = appropriation_of_land_flag
				}
			}
			tooltip = {
				every_owned_province = {
					limit = { has_province_flag = appropriation_of_land_flag }
					add_base_tax = 1
				}
			}
		}
	}
	
	modifier = {
		build_cost = -0.05
	}

	ai_will_do = {
		factor = 1	
	}	
}

charter_university = {

	category = 3

	allow = {
	}
	
	effect = {
		issue_effect_scaling_with_estate_influence = {
			estate = estate_church
			effect1 = "add_adm_power = 10"
			effect2 = "add_adm_power = 25"
			effect3 = "add_adm_power = 50"
			effect4 = "add_adm_power = 75"
			effect5 = "add_adm_power = 100"
			fallback_effect = "add_adm_power = 50"
		}
	}
	
	modifier = {
		technology_cost = -0.05
	}
	
	chance = {
		factor = 1
		modifier = {
			factor = 2
			any_neighbor_country = {
				tech_difference = 5
			}
		}
		modifier = {
			factor = 2
			any_neighbor_country = {
				tech_difference = 8
			}
		}
		modifier = {
			factor = 3
			any_neighbor_country = {
				tech_difference = 10
			}
		}
	}

	ai_will_do = {
		factor = 1
	}	
}

development_of_infrastructure = {

	category = 3

	allow = {
	}
	
	effect = {
		issue_effect_scaling_with_estate_influence = {
			estate = estate_burghers
			effect1 = "add_dip_power = 10"
			effect2 = "add_dip_power = 25"
			effect3 = "add_dip_power = 50"
			effect4 = "add_dip_power = 75"
			effect5 = "add_dip_power = 100"
			fallback_effect = "add_dip_power = 50"
		}
	}
	
	modifier = {
		development_cost = -0.1
	}
	
	chance = {
		factor = 1
		modifier = {
			factor = 2
			has_idea_group = infrastructure_ideas
		}
	}

	ai_will_do = {
		factor = 1	
	}	
}

election_reform = {

	category = 3

	allow = {
		government = republic
	}
	
	effect = {
		issue_effect_scaling_with_estate_influence = {
			estate = estate_burghers
			effect1 = "add_republican_tradition = 5"
			effect2 = "add_republican_tradition = 8"
			effect3 = "add_republican_tradition = 10"
			effect4 = "add_republican_tradition = 13"
			effect5 = "add_republican_tradition = 15"
			fallback_effect = "add_republican_tradition = 10"
		}
	}
	
	modifier = {
		republican_tradition = 0.5
	}

	chance = {
		factor = 1
		modifier = {
			factor = 2
			NOT = { republican_tradition = 60 }
		}
		modifier = {
			factor = 2
			NOT = { republican_tradition = 40 }
		}
		modifier = {
			factor = 5
			NOT = { republican_tradition = 20 }
		}
	}
	
	ai_will_do = {
		factor = 1
		modifier = {
			factor = 2
			NOT = { republican_tradition = 60 }
		}		
	}	
}

estates_fund_industrialization = {

	category = 3

	allow = {
		has_country_flag = pol_new_issues_tt
		estate_loyalty = {
			estate = estate_church
			loyalty = 50 
		}
		estate_loyalty = {
			estate = estate_burghers
			loyalty = 50 
		}
		any_owned_province = {
			OR = {
				has_province_flag = pol_province_needs_industry
				AND = {
					has_manufactory_trigger = no 
					base_production = 5 
				}
			}
		}
	}
	
	on_issue_taken = {
		if = {
			limit = {
				NOT = {
					any_owned_province = {
						has_province_flag = pol_province_needs_industry
					}
				}
			}
			random_owned_province = {
				limit = { 
					has_manufactory_trigger = no 
					base_production = 5
				}
				set_province_flag = pol_province_needs_industry
			}
		}
	}

	effect = {
		if = {
			limit = {
				NOT = {
					any_owned_province = {
						has_province_flag = pol_province_needs_industry
					}
				}
			}
			custom_tooltip = estates_fund_industrialization_tt
		}
		else = {
			tooltip = {
				random_owned_province = { 
					limit = { has_province_flag = pol_province_needs_industry }
					add_manufactory = yes
				}
			}
		}
		hidden_effect = {
			random_owned_province = { 
				limit = { has_province_flag = pol_province_needs_industry }
				clr_province_flag = pol_province_needs_industry 
				add_manufactory = yes
			}
		}
	}
	
	modifier = { build_cost = -0.05 }

	chance = { factor = 2 }
	
	ai_will_do = { factor = 2 }
}

fund_expansion_of_bureaucracy = {

	category = 3

	allow = {
	}
	
	effect = {

	}	
	modifier = {
		advisor_cost = -0.1
	}
	influence_scaled_modifier = {
		global_autonomy = -0.05
		reform_progress_growth = 0.25
	}
	scale_estate_influence = estate_nobles
	
	chance = {
		factor = 2
		modifier = {
			factor = 2
			num_of_cities = 25
		}
	}

	ai_will_do = {
		factor = 1	
	}	
}

fund_national_monuments = {

	category = 3

	allow = {
	}
	
	effect = {
		issue_effect_scaling_with_estate_influence = {
			estate = estate_nobles
			effect1 = "add_prestige_scaled_to_seats = 5"
			effect2 = "add_prestige_scaled_to_seats = 10"
			effect3 = "add_prestige_scaled_to_seats = 15"
			effect4 = "add_prestige_scaled_to_seats = 20"
			effect5 = "add_prestige_scaled_to_seats = 25"
			fallback_effect = "add_prestige_scaled_to_seats = 10"
		}
	}
	
	modifier = {
		prestige = 1
	}
	
	chance = {
		factor = 1
	}

	ai_will_do = {
		factor = 1	
	}	
}

government_debt_reduction = {
	#Government debt funding plan, provinces contribute to payment of debt.

	category = 3

	allow = {
		num_of_loans = 2
	}
	
	effect = {

	}
	
	modifier = {
		interest = -0.25
		inflation_reduction = 0.05
	}

	influence_scaled_modifier = {
		global_tax_modifier = 0.25
	}
	scale_estate_influence = estate_burghers
	
	chance = {
		factor = 1
		modifier = {
			factor = 2
			num_of_loans = 4
		}
		modifier = {
			factor = 2
			num_of_loans = 6
		}
		modifier = {
			factor = 2
			num_of_loans = 8
		}
		modifier = {
			factor = 2
			num_of_loans = 10
		}
	}

	ai_will_do = {
		factor = 1
		modifier = {
			factor = 2
			num_of_loans = 8
		}		
	}	
}

grant_consessions_to_the_brahmins = {

	category = 3

	allow = {
		has_estate = estate_brahmins
	}
	
	effect = {
		add_estate_loyalty = {
			estate = estate_brahmins
			loyalty = 20
		}
	}

	chance = {
		factor = 1
		modifier = {
			factor = 5
			NOT = { 
				estate_loyalty = {
					estate = estate_brahmins
					loyalty = 40
				}
			}
		}
	}
	
	ai_will_do = {
		factor = 1
		modifier = {
			factor = 2
			NOT = { 
				estate_loyalty = {
					estate = estate_brahmins
					loyalty = 40
				}
			}
		}		
	}	
}

grant_consessions_to_the_burghers = {

	category = 3

	allow = {
		has_estate = estate_burghers
	}
	
	effect = {
		add_estate_loyalty = {
			estate = estate_burghers
			loyalty = 20
		}
	}

	chance = {
		factor = 1
		modifier = {
			factor = 5
			NOT = { 
				estate_loyalty = {
					estate = estate_burghers
					loyalty = 40
				}
			}
		}
	}
	
	ai_will_do = {
		factor = 1
		modifier = {
			factor = 2
			NOT = { 
				estate_loyalty = {
					estate = estate_burghers
					loyalty = 40
				}
			}
		}		
	}	
}

grant_consessions_to_the_church = {

	category = 3

	allow = {
		has_estate = estate_church
	}
	
	effect = {
		add_estate_loyalty = {
			estate = estate_church
			loyalty = 20
		}
	}

	chance = {
		factor = 1
		modifier = {
			factor = 5
			NOT = { 
				estate_loyalty = {
					estate = estate_church
					loyalty = 40
				}
			}
		}
	}
	
	ai_will_do = {
		factor = 1
		modifier = {
			factor = 2
			NOT = { 
				estate_loyalty = {
					estate = estate_church
					loyalty = 40
				}
			}
		}		
	}	
}

grant_consessions_to_the_cossacks = {

	category = 3

	allow = {
		has_estate = estate_cossacks
	}
	
	effect = {
		add_estate_loyalty = {
			estate = estate_cossacks
			loyalty = 20
		}
	}

	chance = {
		factor = 1
		modifier = {
			factor = 5
			NOT = { 
				estate_loyalty = {
					estate = estate_cossacks
					loyalty = 40
				}
			}
		}
	}
	
	ai_will_do = {
		factor = 1
		modifier = {
			factor = 2
			NOT = { 
				estate_loyalty = {
					estate = estate_cossacks
					loyalty = 40
				}
			}
		}		
	}	
}

grant_consessions_to_the_dhimmi = {

	category = 3

	allow = {
		has_estate = estate_dhimmi
	}
	
	effect = {
		add_estate_loyalty = {
			estate = estate_dhimmi
			loyalty = 20
		}
	}

	chance = {
		factor = 1
		modifier = {
			factor = 5
			NOT = { 
				estate_loyalty = {
					estate = estate_dhimmi
					loyalty = 40
				}
			}
		}
	}
	
	ai_will_do = {
		factor = 1
		modifier = {
			factor = 2
			NOT = { 
				estate_loyalty = {
					estate = estate_dhimmi
					loyalty = 40
				}
			}
		}		
	}	
}

grant_consessions_to_the_eunuchs = {

	category = 3

	allow = {
		has_estate = estate_eunuchs
	}
	
	effect = {
		add_estate_loyalty = {
			estate = estate_eunuchs
			loyalty = 20
		}
	}

	chance = {
		factor = 1
		modifier = {
			factor = 5
			NOT = { 
				estate_loyalty = {
					estate = estate_eunuchs
					loyalty = 40
				}
			}
		}
	}
	
	ai_will_do = {
		factor = 1
		modifier = {
			factor = 2
			NOT = { 
				estate_loyalty = {
					estate = estate_eunuchs
					loyalty = 40
				}
			}
		}		
	}	
}

grant_consessions_to_the_jains = {

	category = 3

	allow = {
		has_estate = estate_jains
	}
	
	effect = {
		add_estate_loyalty = {
			estate = estate_jains
			loyalty = 20
		}
	}

	chance = {
		factor = 1
		modifier = {
			factor = 5
			NOT = { 
				estate_loyalty = {
					estate = estate_jains
					loyalty = 40
				}
			}
		}
	}
	
	ai_will_do = {
		factor = 1
		modifier = {
			factor = 2
			NOT = { 
				estate_loyalty = {
					estate = estate_jains
					loyalty = 40
				}
			}
		}		
	}	
}

grant_consessions_to_the_janissaries = {

	category = 3

	allow = {
		has_estate = estate_janissaries
	}
	
	effect = {
		add_estate_loyalty = {
			estate = estate_janissaries
			loyalty = 20
		}
	}

	chance = {
		factor = 1
		modifier = {
			factor = 5
			NOT = { 
				estate_loyalty = {
					estate = estate_janissaries
					loyalty = 40
				}
			}
		}
	}
	
	ai_will_do = {
		factor = 1
		modifier = {
			factor = 2
			NOT = { 
				estate_loyalty = {
					estate = estate_janissaries
					loyalty = 40
				}
			}
		}		
	}	
}

grant_consessions_to_the_marathas = {

	category = 3

	allow = {
		has_estate = estate_maratha
	}
	
	effect = {
		add_estate_loyalty = {
			estate = estate_maratha
			loyalty = 20
		}
	}

	chance = {
		factor = 1
		modifier = {
			factor = 5
			NOT = { 
				estate_loyalty = {
					estate = estate_maratha
					loyalty = 40
				}
			}
		}
	}
	
	ai_will_do = {
		factor = 1
		modifier = {
			factor = 2
			NOT = { 
				estate_loyalty = {
					estate = estate_maratha
					loyalty = 40
				}
			}
		}		
	}	
}

grant_consessions_to_the_rajputs = {

	category = 3

	allow = {
		has_estate = estate_rajput
	}
	
	effect = {
		add_estate_loyalty = {
			estate = estate_rajput
			loyalty = 20
		}
	}

	chance = {
		factor = 1
		modifier = {
			factor = 5
			NOT = { 
				estate_loyalty = {
					estate = estate_rajput
					loyalty = 40
				}
			}
		}
	}
	
	ai_will_do = {
		factor = 1
		modifier = {
			factor = 2
			NOT = { 
				estate_loyalty = {
					estate = estate_rajput
					loyalty = 40
				}
			}
		}		
	}	
}

grant_consessions_to_the_vaishyas = {

	category = 3

	allow = {
		has_estate = estate_vaisyas
	}
	
	effect = {
		add_estate_loyalty = {
			estate = estate_vaisyas
			loyalty = 20
		}
	}

	chance = {
		factor = 1
		modifier = {
			factor = 5
			NOT = { 
				estate_loyalty = {
					estate = estate_vaisyas
					loyalty = 40
				}
			}
		}
	}
	
	ai_will_do = {
		factor = 1
		modifier = {
			factor = 2
			NOT = { 
				estate_loyalty = {
					estate = estate_vaisyas
					loyalty = 40
				}
			}
		}		
	}	
}

guarantee_religious_tolerance = {

	category = 3

	allow = {
		any_owned_province = {
			has_owner_religion = no
		}
		NOT = { has_idea_group = religious_ideas }
	}
	
	on_issue_taken = {
		every_owned_province = {
			clr_province_flag = guarantee_religious_tolerance_flag
		}
		random_owned_province = {
			limit = {
				has_owner_religion = no
			}
			set_province_flag = guarantee_religious_tolerance_flag
		}
	}
	
	effect = {
		if = {
			limit = {
				NOT = {
					any_owned_province = {
						has_province_flag = guarantee_religious_tolerance_flag
					}
				}
			}
			custom_tooltip = guarantee_religious_tolerance_tooltip
		}
		if = {
			limit = {
				any_owned_province = {
					has_province_flag = guarantee_religious_tolerance_flag
				}
			}
			random_owned_province = {
				limit = { has_province_flag = guarantee_religious_tolerance_flag }
				custom_tooltip = guarantee_religious_tolerance_tooltip_specified
				hidden_effect = {
					add_province_modifier = {
						name = "provincial_religious_migration"
						duration = 3650
					}
					province_event = { id = parlaments.99 days = 3649 }
				}
			}
		}
	}

	chance = {
		factor = 1
		modifier = {
			factor = 2
			NOT = { religious_unity = 0.5 }
		}
		modifier = {
			factor = 2
			num_of_owned_provinces_with = {
				value = 10
				has_owner_religion = no
			}
		}
		modifier = {
			factor = 2
			num_of_owned_provinces_with = {
				value = 20
				has_owner_religion = no
			}
		}
	}
	
	modifier = {
		tolerance_heretic = 1
		tolerance_heathen = 1
	}

	ai_will_do = {
		factor = 1
		modifier = {
			factor = 2
			num_of_owned_provinces_with = {
				value = 10
				has_owner_religion = no
			}
		}	
	}
}

harmonization_of_laws = {

	category = 3

	allow = {
		OR = {
			vassal = 2
			personal_union = 2
			AND = {
				vassal = 1
				personal_union = 1
			}
		}
		NOT = { government = monarchy }
	}
	
	effect = {
		random_subject_country = {
			add_opinion = {
				who = FROM
				modifier = parliament_closer_ties
			}
		}
	}
	
	modifier = {
		diplomatic_annexation_cost = -0.15
		vassal_income = 0.05
	}
	
	chance = {
		factor = 1
		modifier = {
			factor = 2
			vassal = 3
		}
		modifier = {
			factor = 3
			vassal = 4
		}
		modifier = {
			factor = 4
			vassal = 5
		}
	}

	ai_will_do = {
		factor = 1
		modifier = {
			factor = 2
			vassal = 4
		}
		modifier = {
			factor = 2
			personal_union = 2
		}
	}
}

	
increase_crown_land_share = {

	category = 3

	allow = {
		NOT = { crown_land_share = 80 }
	}
	
	effect = {
		custom_tooltip = add_5_crown_land_share
		hidden_effect = {
			change_estate_land_share = {
			   estate = all
			   share = -5
		    }
		}
	}
	
	chance = {
		factor = 1
		modifier = {
			factor = 0.5
			crown_land_share = 50
		}
		modifier = {
			factor = 2.5
			NOT = { crown_land_share = 20 }
		}
		modifier = {
			factor = 5
			NOT = { crown_land_share = 10 }
		}
		modifier = {
			factor = 5
			NOT = { crown_land_share = 5 }
		}
		modifier = {
			factor = 10
			NOT = { crown_land_share = 1 }
		}
	}

	ai_will_do = {
		factor = 1
		modifier = {
			factor = 1.5
			NOT = { crown_land_share = 30 }
		}
		modifier = {
			factor = 2
			NOT = { crown_land_share = 20 }
		}
		modifier = {
			factor = 2
			NOT = { crown_land_share = 10 }
		}	
	}	
}

increase_taxes = {

	category = 3

	allow = {
	}
	
	effect = {
		issue_effect_scaling_with_estate_influence = {
			estate = estate_nobles
			effect1 = "add_years_of_tax_scaled_to_seats = 0.75"
			effect2 = "add_years_of_tax_scaled_to_seats = 1"
			effect3 = "add_years_of_tax_scaled_to_seats = 1.25"
			effect4 = "add_years_of_tax_scaled_to_seats = 1.5"
			effect5 = "add_years_of_tax_scaled_to_seats = 1.75"
			fallback_effect = "add_years_of_tax_scaled_to_seats = 1"
		}
	}
	
	modifier = {
		global_tax_modifier = 0.10
	}
	
	chance = {
		factor = 1
		modifier = {
			factor = 2
			num_of_loans = 5
		}
		modifier = {
			factor = 2
			num_of_loans = 8
		}
	}

	ai_will_do = {
		factor = 1
		modifier = {
			factor = 2
			num_of_loans = 1
		}		
	}	
}

reform_government_act = {

	category = 3

	allow = {
	}
	
	effect = {
		issue_effect_scaling_with_estate_influence = {
			estate = estate_nobles
			effect1 = "change_government_reform_progress = 15"
			effect2 = "change_government_reform_progress = 30"
			effect3 = "change_government_reform_progress = 45"
			effect4 = "change_government_reform_progress = 60"
			effect5 = "change_government_reform_progress = 75"
			fallback_effect = "change_government_reform_progress = 30"
		}
	}
	
	modifier = {
		reform_progress_growth = 0.25
	}
	
	chance = {
		factor = 1
		modifier = {
			factor = 2
			num_of_loans = 5
		}
		modifier = {
			factor = 2
			num_of_loans = 8
		}
	}

	ai_will_do = {
		factor = 1
		modifier = {
			factor = 2
			num_of_loans = 1
		}		
	}	
}

integration_of_minorities = {

	category = 3

	allow = {
		always = no #No longer works well with new culture acceptance system.
		any_owned_province = {
			has_seat_in_parliament = no
			has_owner_accepted_culture = no
			has_owner_culture = no
			is_overseas = no
		}
		NOT = { has_idea_group = religious_ideas }
	}
	
	on_issue_taken = {
		every_owned_province = {
			clr_province_flag = integrating_minorities_parliament
		}
		random_owned_province = {
			limit = {
				has_owner_accepted_culture = no
				has_owner_culture = no
				has_seat_in_parliament = no
				is_overseas = no
			}
			set_province_flag = integrating_minorities_parliament
		}
	}
	
	effect = {
		hidden_effect = {
			random_owned_province = {
				limit = {
					has_province_flag = integrating_minorities_parliament
				}
				set_seat_in_parliament = yes
				clr_province_flag = integrating_minorities_parliament
			}
		}
		if = {
			limit = {
				NOT = {
					any_owned_province = {
						has_province_flag = integrating_minorities_parliament
					}
				}
			}
			tooltip = {
				custom_tooltip = integrating_minorities_parliament_tooltip
			}
		}
		if = {
			limit = {
				any_owned_province = {
					has_province_flag = integrating_minorities_parliament
				}
			}
			tooltip = {
				random_owned_province = {
					limit = { has_province_flag = integrating_minorities_parliament }
					set_seat_in_parliament = yes
				}
			}
		}
	}
	
	modifier = {
		promote_culture_cost = -1
	}
	
	chance = {
		factor = 1
		modifier = {
			factor = 2
			num_of_owned_provinces_with = {
				value = 10
				has_owner_accepted_culture = no
				has_owner_culture = no
			}
		}
		modifier = {
			factor = 3
			num_of_owned_provinces_with = {
				value = 20
				has_owner_accepted_culture = no
				has_owner_culture = no
			}
		}
	}

	ai_will_do = {
		factor = 1
		modifier = {
			factor = 2
			num_of_owned_provinces_with = {
				value = 10
				has_owner_accepted_culture = no
				has_owner_culture = no
			}
		}	
	}
}

issue_investigate_corruption = {

	category = 3

	allow = {
		corruption = 0.5
	}
	
	effect = {
		issue_effect_scaling_with_estate_influence = {
			estate = estate_church
			effect1 = "add_corruption = -0.25"
			effect2 = "add_corruption = -0.5"
			effect3 = "add_corruption = -0.75"
			effect4 = "add_corruption = -1"
			effect5 = "add_corruption = -1.25"
			fallback_effect = "add_corruption = -0.5"
		}
	}
	
	modifier = {
		yearly_corruption = -0.05
	}

	chance = {
		factor = 1
		modifier = {
			factor = 2
			corruption = 3
		}
		modifier = {
			factor = 2
			corruption = 10
		}
		modifier = {
			factor = 5
			corruption = 20
		}
	}
	
	ai_will_do = {
		factor = 1
		modifier = {
			factor = 2
			corruption = 5
		}		
	}	
}

nationwide_census = {

	category = 3
	
	allow = {
		num_of_cities = 6
	}
	
	on_issue_taken = {
		every_owned_province = {
			clr_province_flag = nationwide_census_flag
		}
		random_owned_province = {
			limit = {
				is_in_capital_area = yes
			}
			set_province_flag = nationwide_census_flag
		}
	}
	
	effect = {
		hidden_effect = {
			every_owned_province = {
				limit = { has_province_flag = nationwide_census_flag }
				add_base_manpower = 1
				clr_province_flag = nationwide_census_flag
			}
		}
		if = {
			limit = {
				NOT = {
					any_owned_province = {
						has_province_flag = nationwide_census_flag
					}
				}
			}
			tooltip = {
				custom_tooltip = nationwide_census_tooltip
			}
		}
		if = {
			limit = {
				any_owned_province = {
					has_province_flag = nationwide_census_flag
				}
			}
			tooltip = {
				every_owned_province = {
					limit = { has_province_flag = nationwide_census_flag }
					add_base_manpower = 1
				}
			}
		}
	}
	
	modifier = {
		global_manpower_modifier = 0.05
	}

	ai_will_do = {
		factor = 1	
	}	
}

nationwide_land_survey = {

	category = 3
	
	allow = {
		num_of_cities = 6
	}
	
	on_issue_taken = {
		every_owned_province = {
			clr_province_flag = nationwide_land_survey_flag
		}
		random_owned_province = {
			limit = {
				is_in_capital_area = yes
			}
			set_province_flag = nationwide_land_survey_flag
		}
	}
	
	effect = {
		hidden_effect = {
			every_owned_province = {
				limit = { has_province_flag = nationwide_land_survey_flag }
				add_base_production = 1
				set_province_flag = nationwide_land_survey_flag
			}
		}
		if = {
			limit = {
				NOT = {
					any_owned_province = {
						has_province_flag = nationwide_land_survey_flag
					}
				}
			}
			tooltip = {
				custom_tooltip = nationwide_land_survey_tooltip
			}
		}
		if = {
			limit = {
				any_owned_province = {
					has_province_flag = nationwide_land_survey_flag
				}
			}
			tooltip = {
				every_owned_province = {
					limit = { has_province_flag = nationwide_land_survey_flag }
					add_base_production = 1
				}
			}
		}
	}
	
	modifier = {
		production_efficiency = 0.05
	}

	ai_will_do = {
		factor = 1	
	}	
}

prohibit_use_of_local_languages = {
	#Prohibit use of local languages in administration, settlement a la Ireland, Russification, etc.

	category = 3

	allow = {
		any_owned_province = {
			has_owner_accepted_culture = no
		}
		NOT = { has_idea_group = humanist_ideas }
	}
	
	
	modifier = {
		culture_conversion_cost = -0.15
	}
	
	chance = {
		factor = 1
		modifier = {
			factor = 2
			num_of_owned_provinces_with = {
				value = 10
				has_owner_accepted_culture = no
				has_owner_culture = no
			}
		}
		modifier = {
			factor = 3
			num_of_owned_provinces_with = {
				value = 20
				has_owner_accepted_culture = no
				has_owner_culture = no
			}
		}
	}

	ai_will_do = {
		factor = 1
		modifier = {
			factor = 2
			num_of_owned_provinces_with = {
				value = 10
				has_owner_accepted_culture = no
			}
		}		
	}	
}

propagation_of_state_religion = {

	category = 3

	allow = {
		any_owned_province = {
			has_owner_religion = no
		}
		NOT = { has_idea_group = humanist_ideas }
		OR = {
			NOT = { has_dlc = "Mandate of Heaven" }
			NOT = { religion = confucianism }
		}
	}
	
	effect = {
		issue_effect_scaling_with_estate_influence = {
			estate = estate_church
			effect1 = "
			define_advisor = {
				type = inquisitor
				skill = 3
			}
			"
			effect2 = "
			define_advisor = {
				type = inquisitor
				skill = 3
				cost_multiplier = 0.75
			}
			"
			effect3 = "
			define_advisor = {
				type = inquisitor
				skill = 3
				cost_multiplier = 0.5
			}
			"
			effect4 = "
			define_advisor = {
				type = inquisitor
				skill = 3
				cost_multiplier = 0.25
			}
			"
			effect5 = "
			define_advisor = {
				type = inquisitor
				skill = 3
				cost_multiplier = 0.1
			}
			"
			fallback_effect = "
			define_advisor = {
				type = inquisitor
				skill = 3
				cost_multiplier = 0.75
			}
			"
		}
	}
	
	modifier = {
		global_missionary_strength = 0.01
		missionaries = 1
	}
	
	chance = {
		factor = 1
		modifier = {
			factor = 2
			NOT = { religious_unity = 0.5 }
		}
		modifier = {
			factor = 2
			num_of_owned_provinces_with = {
				value = 10
				has_owner_religion = no
			}
		}
		modifier = {
			factor = 10
			num_of_owned_provinces_with = {
				value = 20
				has_owner_religion = no
			}
		}
	}

	ai_will_do = {
		factor = 1
		modifier = {
			factor = 2
			num_of_owned_provinces_with = {
				value = 10
				has_owner_religion = no
			}
		}	
	}	
}

restore_integration = {

	category = 3

	allow = {
		has_country_modifier = annexers_legacy
	}
	
	on_issue_taken = {
	}

	effect = {
		remove_country_modifier = annexers_legacy
	}
	
	modifier = {
		diplomatic_reputation = 1
	}

	chance = {
		factor = 10
	}
	
	ai_will_do = {
		factor = 10
	}
}

support_ruling_dynasty = {

	category = 3
